# SimFlow

./: .claude.mcp.json  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.codex-plugin/: plugin.json
agents/: README.md  data_analyst.md  literature_reviewer.md  modeler.md  strategist.md  visualizer.md  writer.md
docs/: PRD.md  README.md  artifact-schema.md  current-limitations.md  custom-skills.md  developer_guide.md  hpc-integration.md  implementation-workflow.md  installation.md  mcp-design.md  migration.md  mlp-md-workflow.md  quickstart_claude.md  quickstart_codex.md  release-checklist.md  release-smoke-results.md  release_claude.md  skill-design.md  software-skills.md  state-and-checkpoint.md  target-repo-structure.md  technical-design.md  user_guide.md  verification-gates.md  workflow-layer-design.md
hooks/: before_handoff.md  internal_workflow_hooks.json  on_error.md  post_analysis.md  post_stage.md  pre_stage.md  pre_submit.md
mcp/: .mcp.json  __init__.py
notifications/: approval_required.md  checkpoint_created.md  console.md  email.md  notification-policy.json  stage_complete.md  stage_failed.md  webhook.md  workflow_complete.md
schemas/: adapter_enablement_review.schema.json  artifact.json  checkpoint.json  custom-skill-metadata.schema.json  hpc-job.schema.json  skill-contract.schema.json  stage_state.json  state.schema.json  workflow.schema.json  workflow_state.json
scripts/: audit_skill_scripts.py  build_claude_marketplace_wrapper.js  (+15 more)
(+763 files in other folders)
